--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "inter-ui": "^3.13.1",
     "jotai": "^1.3.7",
     "jsbi": "^3.1.4",
+    "kroma-uniswap-smart-order-router": "../kroma-uniswap-smart-order-router",
     "make-plural": "^7.0.0",
     "multicodec": "^3.0.1",
     "multihashes": "^4.0.2",
