--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "i18n:pseudo": "lingui extract --locale pseudo && lingui compile",
     "prepare": "yarn contracts:compile && yarn graphql:fetch && yarn graphql:generate && yarn i18n:compile",
     "start": "craco start",
-    "build": "craco build",
+    "build:dev": "env-cmd -f .env.development craco build",
+    "build:staging": "env-cmd -f .env.staging craco build",
+    "build:prod": "env-cmd -f .env.production craco build",
     "serve": "serve build -l 3000",
     "deduplicate": "yarn-deduplicate --strategy=highest",
     "lint": "yarn eslint .",
