--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,30 @@
 {
   "background_color": "#fff",
   "display": "standalone",
-  "homepage_url": "https://app.uniswap.org",
+  "homepage_url": "https://swap.sepolia.kroma.network",
   "providedBy": {
-    "name": "Uniswap",
-    "url": "https://uniswap.org"
+    "name": "Kroma",
+    "url": "https://kroma.network"
   },
   "icons": [
     {
-      "src": "./images/192x192_App_Icon.png",
+      "src": "./images/apple-touch-icon.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./images/512x512_App_Icon.png",
+      "src": "./images/apple-touch-icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
   "orientation": "portrait",
-  "name": "Uniswap",
-  "description": "Swap or provide liquidity on the Uniswap Protocol",
-  "iconPath": "./images/256x256_App_Icon_Pink.svg",
-  "short_name": "Uniswap",
+  "name": "Swap",
+  "description": "Kroma aims to be a New Universal ZK Rollup on Ethereum",
+  "iconPath": "./images/apple-touch-icon.png",
+  "short_name": "Swap",
   "start_url": ".",
-  "theme_color": "#FC72FF"
+  "theme_color": "#70DE2C"
 }
